src/client/style/global_styles.scss
/* @flow
 * provendocs
 * Copyright (C) 2019  Southbank Software Ltd.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 * @Author: Michael Harrison
 * @Date:   2019-03-29T10:46:51+11:00
 * @Last modified by:   Michael Harrison
 * @Last modified time: 2019-04-03T09:18:20+11:00
 */
@import "./global_colors.scss";
@import "~@blueprintjs/core/src/blueprint.scss";
@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:100,300,400,500,700,900");

html {
  height: 100%;
  overflow: hidden;
}

.Pane2 {
  min-width: 0;
}

body {
  background-color: $main_background_blue;
  height: 100%;
  overflow-y: auto;
  font-family: 'Roboto', sans-serif;
  margin: 0px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
}

.ant-dropdown-menu {
  border-radius: 7px;
  background-color: $white;
  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.05);

  .ant-dropdown-menu-item {
    color: $gunmetal;
    opacity: 0.5;
    font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
  }

  .sort_selected_true {
    background-color: $white-three;
    font-weight: bold;
  }
}

.ant-btn {
  width: 126px;
  height: 37px;
  border-radius: 5px;
  background-color: $tealish;
}

.ant-btn:hover {
  background-color: $tealish-two;
}

iframe {
  border: none;
}

#root {
  height: 100%;
  overflow: hidden;
}

.App {
  display: flex;
  flex-direction: column;
  height: 100%;
  min-height: 800px;

  .AppBody {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    overflow-y: auto;

    .mainPanel {
      display: flex;
      flex-direction: column;
      width: 100%;
      height: 100%;
      min-width: 1200px;
      overflow-x: hidden;

      @media screen and (max-width: 420px) {
        min-width: 400px;
      }
    }

    .notFound {
      .heroSection {
        flex-grow: 1;
      }
    }
  }
}

//// ===    Fonts     === ////
.sectionTitle {
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.17;
  letter-spacing: normal;
  color: #ffffff;
}

.sectionText {
  height: 16px;
  font-size: 12px;
  font-weight: lighter;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.17;
  letter-spacing: normal;
  color: #ffffff;
}

.bodyText {
  font-size: 16px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.56;
  letter-spacing: 0.2px;
  text-align: left;
  color: #ffffff;
}

a {
  color: white;
}

h1 {
  font-size: 30px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: 2;
  letter-spacing: 0.9px;
  text-align: left;
  color: #ffffff;
}

h2 {
  font-size: 26px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: 2;
  letter-spacing: 0.5px;
  text-align: left;
  color: #ffffff;
}

h3 {
  width: 90.6px;
  height: 22px;
  font-size: 16px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.56;
  letter-spacing: 0.2px;
  text-align: left;
  color: #ffffff;
}

//// ===    ===     === ////
//// ===    Buttons     === ////
.button {
  background: unset;
  border: 1px solid white;
  width: 80.6px;
  height: 26.2px;
  border-radius: 0.25em;
  display: flex;
  justify-content: center;
  align-items: center;

  .button-text {
    font-size: 11px;
    margin-left: 10px;
    margin-right: 10px;
    font-weight: bold;
    font-style: normal;
    font-stretch: normal;
    line-height: 1.18;
    letter-spacing: normal;
    text-align: center;
    color: white;
  }
}

.button:focus {
  outline: none;
  text-decoration: none;
}

.button:hover {
  text-decoration: none;
  opacity: 0.9;
}

.whiteButton {
  box-shadow: none !important;
  background-clip: none !important;
  background: none;
  outline: none !important;
  background-color: $white_button_background !important;
  color: $white_button_font !important;
  border-radius: 0.5em;

  .bp3-button-text {
    color: $white_button_font !important;
    font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: bold;
  }
}

.bp3-button:focus {
  outline: none;
}

.whiteButton:hover {
  opacity: 0.9;
}

.whiteButton:active {
  background-color: $white_button_background_press !important;
}

.blueButton {
  background: none !important;
  margin-right: 11px;
  outline: none !important;
  background-color: $blue_button_background !important;
  color: white !important;
  border-radius: 0.5em;

  .bp3-button-text {
    color: $white !important;
  }
}

.blueButton:hover {
  background-color: $blue_button_background_hover !important;
}

.blueButton:active {
  background-color: $blue_button_background_press !important;
}

//// ==================== ////
//// ===    Icons     === ////
.icon {
  width: 20px;
  height: 20px;

  svg {
    fill: white !important;
  }
}

.iframeHolder {
  background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100% 100%"><text fill="%FFFFFF" x="50%" y="50%" font-family="\'Roboto\', sans-serif" font-size="24" text-anchor="middle">Loading Preview...</text></svg>') 0px 0px no-repeat;
}

#question-mark-icon {
  .cls-1 {
    fill: #95a5a5;
    opacity: .9;
  }
}
/* ... */

